--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
-    "react-native-video": "^6.0.0-alpha.6",
+    "react-native-video": "^5.2.1",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
