--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.329.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.329.0",
     "@react-native-camera-roll/camera-roll": "^5.4.0",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "pod-install": "^0.1.38",
@@ -23,9 +24,14 @@
     "react-native-compressor": "^1.6.1",
     "react-native-create-thumbnail": "^1.6.4",
     "react-native-image-picker": "^5.3.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-video": "^5.2.1",
+    "react-redux": "^8.0.5",
+    "recyclerlistview": "^4.2.0",
+    "redux": "^4.2.1",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
